adding info about interviewing but not pushing

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -91,7 +91,7 @@
 % Contact info
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   185 NE Stevens Way & \texttt{iyzhang@cs.washington.edu} \\
-  Seattle, WA  98195 & \texttt{http://irenezhang.net} \\ 
+  Seattle, WA  98195 & \texttt{https://irenezhang.net} \\ 
 \end{tabular*}
 
 \vspace{\partgap}
@@ -356,6 +356,7 @@
   \begin{rsection}{Invited\\Talks}
     \begin{rentry}{Automating Data Management for Wide-area, Reactive
         Applications}{}
+      \rline{CloudPhysics Tech Talk, Host: Irfan Ahmad}{Dec 2016}
       \rline{Symposium on Operating Systems Design and Implementation (OSDI)}{Nov 2016}
       \rline{UW CSE Industrial Affiliates Meeting}{Oct 2016}
       \vspace{-0.5em}
@@ -532,7 +533,7 @@
     
     US Patent App. 13/935,382. \textit{Identification of Page Sharing Opportunities within Large Pages.} Y. Baskakov, A. Garthwaite, R. Venkatasubramanian, \textbf{I. Zhang}, S. Kim, N. Bhatia, K. Tati\\
   \end{rsection}
-  \vspace{1.0em}
+
   \begin{rsection}{Work\\Experience}
     \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
       \rline{MTS, Virtual Machine Monitor
@@ -563,6 +564,37 @@
       \rline{Web Development Intern}{Aug 2003 - May 2004}
       \vspace{-.5em}
     \end{rentry}
+  \end{rsection}
+
+  \begin{rsection}{References}
+    Henry M. Levy\\
+    Chairman \& Wissner-Slivka Chair\\
+    Department of Computer Science \& Engineering, University of Washington\\
+    \texttt{levy@cs.washington.edu}\\
+    \vspace{-.5em}
+    
+    Arvind Krishnamurthy\\
+    Professor\\
+    Department of Computer Science \& Engineering, University of Washington\\
+    \texttt{arvind@cs.washington.edu}\\
+    \vspace{-.5em}
+    
+    Thomas E. Anderson\\
+    Warren Francis \& Wilma Kolm Bradley Chair\\
+    Department of Computer Science \& Engineering, University of Washington\\
+    \texttt{tom@cs.washington.edu}\\
+    \vspace{-.5em}
+    
+    M. Frans Kaashoek\\
+    Charles Piper Professor\\
+    Department of Electrical Engineering \& Computer Science, MIT\\
+    \texttt{kaashoek@csail.mit.edu}\\
+    \vspace{-.5em}
+    
+    Edward D. Lazowska\\
+    Bill \& Melinda Gates Chair\\
+    Department of Computer Science \& Engineering, University of Washington\\
+    \texttt{lazowska@cs.washington.edu}\\
   \end{rsection}
 \end{rtable}
 \end{document}
