--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -31,6 +31,7 @@ code={https://github.com/bholt/ipa}
   booktitle = osdi,
   year = 	 2016,
   month = 	 11,
+  talk = {https://www.usenix.org/conference/osdi16/technical-sessions/presentation/zhang-irene},
   abstract = { Users of today's popular wide-area apps (e.g., Twitter,
                   Google Docs, and Words with Friends) must no longer
                   save and reload when updating shared data; instead,
