updating some formatting things

--- a/_posts/2016-12-16-geekwire.md
+++ b/_posts/2016-12-16-geekwire.md
@@ -2,8 +2,9 @@
 layout: post
 shortnews: true
 photo: img/geekwire.png
+link: http://www.geekwire.com/2016/irene-zhang/
 ---
 
 [GeekWire](http://www.geekwire.com/) selected me as their Geek of the
 Week, including a very nice
-[write-up on me and my research](http://www.geekwire.com/2016/irene-zhang/).
+[write-up on me and my research](http://www.geekwire.com/2016/irene-zhang/). 
