--- a/_posts/2017-01-04-acm-queue.md
+++ b/_posts/2017-01-04-acm-queue.md
@@ -2,12 +2,13 @@
 layout: post
 shortnews: true
 photo: img/acm-queue.png
+link: http://queue.acm.org/detail.cfm?id=3023318
 ---
 
 In the end-of-year rush, I completely missed that the
 [ACM Queue](http://queue.acm.org/) published my invited article on
-distributed transactions for their "Research for Practice"
+distributed transactions in their "Research for Practice"
 series. [My article](http://queue.acm.org/detail.cfm?id=3023318)
 summarizes three recent papers -- Spanner, TAPIR, and Callas -- and
-discusses why they are important innovations for distributed
+discusses why they are important innovations in distributed
 transactions.
