new job new website

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -425,10 +425,13 @@
     MIT News. October 14, 2010.\\
   \end{rsection}
   \begin{rsection}{Service}
-    \begin{rentry}{USENIX ATC}{2018}
+    \begin{rentry}{OSDI, Program Committee}{2018}
        \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{VEE}{2018}
+    \begin{rentry}{USENIX ATC, Program Committee}{2018}
+       \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{VEE, Program Committee}{2018}
        \vspace{-0.5em}
     \end{rentry}
     \begin{rentry}{ASPLOS, External Reviewer}{2017}
