adding papoc paper to webpage:

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -23,8 +23,8 @@
   guarantees of coherence, consistency and isolation. This paper presents a simple,
   unified model for defining ordering guarantees that is sufficiently general to
   model a wide range of systems, including processor memory, distributed storage,
-  and databases. We define a new single constraint relationship, \emph{result
-  visibility}, which formalizes the ``appears to execute before'' relationship
+  and databases. We define a new single constraint relationship, result
+  visibility, which formalizes the ``appears to execute before'' relationship
   between operations. Using only result visibility, we define more than 20
   ordering guarantees from different research areas, including
   PRAM, snapshot isolation and
