adding thesis to publications

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -9,6 +9,52 @@
 @string{socc = "Proceedings of the ACM Symposium on Cloud Computing (SoCC)"}
 @string{tocs = "ACM Transactions on Computer Systems (TOCS)"}
 
+
+
+@PhdThesis{zhang17:_towar_flexib_high_perfor_operat,
+  author =       {Irene Zhang},
+  title =        {Towards a Flexible, High-Performance Operating
+                  System for Mobile/Cloud Applications},
+  school =       {University of Washington},
+  year =         2017,
+  abstract = {The convergence of ubiquitous mobile devices,
+                  large-scale cloud platforms and pervasive network
+                  connectivity have changed the face of modern user
+                  applications. Unlike a traditional desktop
+                  application, which runs on a single machine and
+                  supports a single user, the typical user-facing
+                  application today spans numerous mobile devices and
+                  cloud servers while supporting large numbers of
+                  users. This shift significantly increased the
+                  difficulty of building new user
+                  applications. Programmers must now confront
+                  challenges introduced by distributed deployment
+                  (e.g., partial failures), new mobile/cloud
+                  application features (e.g., reactivity), and new
+                  mobile/cloud requirements (e.g., scalability).  This
+                  thesis proposes a new type of mobile/cloud operating
+                  system designed to meet the evolving needs of modern
+                  applications. Mobile/cloud applications are the
+                  standard applications of the future; thus, they
+                  deserve a first-class operating system that
+                  simplifies their development and run-time
+                  management. Our key contribution is the design,
+                  implementation and evaluation of three systems that
+                  together form the basis for a new mobile/cloud
+                  operating system: (1) Sapphire, a new distributed
+                  run-time and process management system, (2) Diamond,
+                  a new distributed memory management system, and (3)
+                  TAPIR, a new distributed storage system. Each system
+                  introduces new operating systems abstractions and
+                  mechanisms designed to eliminate the challenges and
+                  simplify the development of mobile/cloud
+                  applications. We demonstrate that, like operating
+                  systems of the past, these systems make it easier
+                  for programmers to build bigger and more complex
+                  applications.},
+url = {papers/thesis.pdf}
+}
+
 @InProceedings{consistency-papoc18,
   author =        {Adriana Szekeres and Irene Zhang},
   month =         4,
