adding dissertation award to page

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -11,12 +11,14 @@
 
 
 
-@PhdThesis{zhang17:_towar_flexib_high_perfor_operat,
+@PhdThesis{zhang17_towar_flexib_high_perfor_operat,
   author =       {Irene Zhang},
   title =        {Towards a Flexible, High-Performance Operating
                   System for Mobile/Cloud Applications},
   school =       {University of Washington},
+  month = 10,
   year =         2017,
+  url = {papers/thesis.pdf},
   abstract = {The convergence of ubiquitous mobile devices,
                   large-scale cloud platforms and pervasive network
                   connectivity have changed the face of modern user
@@ -51,8 +53,7 @@
                   applications. We demonstrate that, like operating
                   systems of the past, these systems make it easier
                   for programmers to build bigger and more complex
-                  applications.},
-url = {papers/thesis.pdf}
+                  applications.}
 }
 
 @InProceedings{consistency-papoc18,
