--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -273,12 +273,17 @@
   % \end{rsection}
   
   \begin{rsection}{Workshop\\Publications}
+    A. Szekeres and \textbf{I. Zhang}. \textit{Making Consistency More
+      Consistent: A Unified Model for Coherence, Consistency and
+      Isolation}. In Proceedings of the Workshop on Principles and
+    Practice of Consistency for Distributed Data (PaPoC). Porto,
+    Portugal. April 2018. \\\vspace{-0.5em}
+
     B. Holt, \textbf{I. Zhang}, D. R. K. Ports, M. Oskin and L. Ceze.
     \textit{Claret: Using Data Types for Highly Concurrent Distributed
       Transactions.} In Proceedings of the Workshop on Principles and
     Practice of Consistency for Distributed Data (PaPoC).  Bordeaux,
     France. April 2015.\\\vspace{-0.5em}
-
 
     S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports,
     T. Anderson, A. Krishnamurthy, M. Zbikowski. \textit{Towards
@@ -308,6 +313,9 @@
   \end{rsection}
 
   \begin{rsection}{Fellowships\\\& Awards}
+    \begin{rentry}{UW CSE William Chan Memorial Dissertation}{2018}
+      \vspace{-0.75em}
+    \end{rentry} 
     \begin{rentry}{Microsoft Research PhD Fellowship}{2015}
       \vspace{-0.75em}
     \end{rentry} 
@@ -358,73 +366,62 @@
     \end{rentry}
   \end{rsection}
 
-  \begin{rsection}{Invited\\Talks}
-    \begin{rentry}{Automating Data Management for Wide-area, Reactive
-        Applications}{}
-      \rline{CloudPhysics Tech Talk, Host: Irfan Ahmad}{Dec 2016}
-      \rline{Symposium on Operating Systems Design and Implementation (OSDI)}{Nov 2016}
-      \rline{UW CSE Industrial Affiliates Meeting}{Oct 2016}
-      \vspace{-0.5em}
-    \end{rentry}
-    % \begin{rentry}{Distributed Operating Systems for Modern Applications}{}
-    %   \rline{CSE Symposium}{Jan 2015}
-    %   \vspace{-0.5em}
-    % \end{rentry}
-    \begin{rentry}{Building Consistent Transactions with Inconsistent
-        Replication}{}
-      \rline{UW Cloud Day}{Jun 2016}
-      \rline{MSR Tech Talk, Host: Myeongjae Jeon}{Mar 2016}
-      \rline{Google Tech Talk, Host: Daniel Myers}{Dec 2015}
-      \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2015}
-      \rline{Symposium on Operating Systems Principles (SOSP)}{Oct 2015}
-      \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{Customizable and Extensible Deployment for
-        Mobile/Cloud Applications}{}
-      \rline{MSR Tech Talk, Host: Phil Bernstein}{Nov 2014}
-      \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2014}
-      \rline{Symposium on Operating Systems Design and
-        Implementation (OSDI)}{Oct 2014}
-      \rline{UW Systems Seminar}{Oct 2014}
-      \rline{Symposium on Operating Systems Principles (SOSP) Work-in-Progress}{Nov 2013}
-      \rline{UW/MSR Research Day}{Apr 2013}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{Optimizing VM Checkpointing for Restore Performance
-      in VMware ESXi}{} 
-      \rline{USENIX Annual Technical Conference (USENIX ATC)}{Jun
-        2013}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{Fast Restore of Checkpointed Memory using Working
-        Set Estimation}{}
-      \rline{University of Washington Tech Talk}{Oct 2011}
-      \rline{Cornell SWE Tech Talk}{Sep 2011}
-      \rline{Conference on Virtual Execution Environments (VEE)}{Mar
-        2011}
-      \vspace{-0.5em}
-    \end{rentry}
-  \end{rsection}
-\end{rtable}
+  % \begin{rsection}{Invited\\Talks}
+  %   \begin{rentry}{Automating Data Management for Wide-area, Reactive
+  %       Applications}{}
+  %     \rline{CloudPhysics Tech Talk, Host: Irfan Ahmad}{Dec 2016}
+  %     \rline{Symposium on Operating Systems Design and Implementation (OSDI)}{Nov 2016}
+  %     \rline{UW CSE Industrial Affiliates Meeting}{Oct 2016}
+  %     \vspace{-0.5em}
+  %   \end{rentry}
+  %   % \begin{rentry}{Distributed Operating Systems for Modern Applications}{}
+  %   %   \rline{CSE Symposium}{Jan 2015}
+  %   %   \vspace{-0.5em}
+  %   % \end{rentry}
+  %   \begin{rentry}{Building Consistent Transactions with Inconsistent
+  %       Replication}{}
+  %     \rline{UW Cloud Day}{Jun 2016}
+  %     \rline{MSR Tech Talk, Host: Myeongjae Jeon}{Mar 2016}
+  %     \rline{Google Tech Talk, Host: Daniel Myers}{Dec 2015}
+  %     \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2015}
+  %     \rline{Symposium on Operating Systems Principles (SOSP)}{Oct 2015}
+  %     \rline{Amazon Tech Talk, Host: Andrew Certain}{Nov 2014}
+  %     \vspace{-0.5em}
+  %   \end{rentry}
+  %   \begin{rentry}{Customizable and Extensible Deployment for
+  %       Mobile/Cloud Applications}{}
+  %     \rline{MSR Tech Talk, Host: Phil Bernstein}{Nov 2014}
+  %     \rline{UW CSE Industrial Affiliates Annual Meeting}{Oct 2014}
+  %     \rline{Symposium on Operating Systems Design and
+  %       Implementation (OSDI)}{Oct 2014}
+  %     \rline{UW Systems Seminar}{Oct 2014}
+  %     \rline{Symposium on Operating Systems Principles (SOSP) Work-in-Progress}{Nov 2013}
+  %     \rline{UW/MSR Research Day}{Apr 2013}
+  %     \vspace{-0.5em}
+  %   \end{rentry}
+  %   \begin{rentry}{Optimizing VM Checkpointing for Restore Performance
+  %     in VMware ESXi}{} 
+  %     \rline{USENIX Annual Technical Conference (USENIX ATC)}{Jun
+  %       2013}
+  %     \vspace{-0.5em}
+  %   \end{rentry}
+  %   \begin{rentry}{Fast Restore of Checkpointed Memory using Working
+  %       Set Estimation}{}
+  %     \rline{University of Washington Tech Talk}{Oct 2011}
+  %     \rline{Cornell SWE Tech Talk}{Sep 2011}
+  %     \rline{Conference on Virtual Execution Environments (VEE)}{Mar
+  %       2011}
+  %     \vspace{-0.5em}
+  %   \end{rentry}
+  % \end{rsection}
 
-\begin{rtable}
-  \begin{rsection}{Press}
-    \textit{Geek of the Week: UW Ph.D. student Irene Zhang has big
-      ideas to make life easier for programmers.} GeekWire. December
-    16, 2016.\\\vspace{-0.5em}
-    
-    \textit{Bringing
-      women back to computer science: UW in national spotlight over
-      efforts.} Crosscuts. March 28, 2016.\\\vspace{-0.5em}
-
-    \textit{Cutting-edge server operating system wins UW computer
-      science prize.} GeekWire. October 23, 2014.\\\vspace{-0.5em}
-
-    \textit{Faster websites, more reliable data.}
-    MIT News. October 14, 2010.\\
-  \end{rsection}
-  \begin{rsection}{Service}
+    \begin{rsection}{Service}
+    \begin{rentry}{NSDI, Program Committee}{2019}
+       \vspace{-0.5em}
+    \end{rentry}
+    \begin{rentry}{ASPLOS, Program Committee}{2019}
+       \vspace{-0.5em}
+    \end{rentry}
     \begin{rentry}{OSDI, Program Committee}{2018}
        \vspace{-0.5em}
     \end{rentry}
@@ -455,25 +452,44 @@
       \rline{Founder}{2015}
        \vspace{-0.5em}
     \end{rentry}
-    \begin{rentry}{UW Graduate Student Committee}{}
-      \rline{Graduate Admissions Committee}{2014-2016}
-      \rline{Graduate Women's Event Coordinator}{2014-2015}
-      \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{UW Undergrad Women Mentor}{2015-2016}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{UW Graduate Student Mentor}{2013-2014}
-      \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{VMware Women's Outreach and Recruiting}{2009-2012}
-       \vspace{-0.5em}
-    \end{rentry}
-    \begin{rentry}{Eta Kappa Nu EECS Honor Society Officer}{2008-2009}
-      \vspace{-0.5em}
-    \end{rentry}
+    % \begin{rentry}{UW Graduate Student Committee}{}
+    %   \rline{Graduate Admissions Committee}{2014-2016}
+    %   \rline{Graduate Women's Event Coordinator}{2014-2015}
+    %   \rline{Graduate Visit Days Committee Co-chair}{2013-2014}
+    %   \vspace{-0.5em}
+    % \end{rentry}
+    % \begin{rentry}{UW Undergrad Women Mentor}{2015-2016}
+    %   \vspace{-0.5em}
+    % \end{rentry}
+    % \begin{rentry}{UW Graduate Student Mentor}{2013-2014}
+    %   \vspace{-0.5em}
+    % \end{rentry}
+    % \begin{rentry}{VMware Women's Outreach and Recruiting}{2009-2012}
+    %    \vspace{-0.5em}
+    % \end{rentry}
+    % \begin{rentry}{Eta Kappa Nu EECS Honor Society Officer}{2008-2009}
+    %   \vspace{-0.5em}
+    % \end{rentry}
   \end{rsection}
+
+\end{rtable}
+
+\begin{rtable}
+  % \begin{rsection}{Press}
+  %   \textit{Geek of the Week: UW Ph.D. student Irene Zhang has big
+  %     ideas to make life easier for programmers.} GeekWire. December
+  %   16, 2016.\\\vspace{-0.5em}
+    
+  %   \textit{Bringing
+  %     women back to computer science: UW in national spotlight over
+  %     efforts.} Crosscuts. March 28, 2016.\\\vspace{-0.5em}
+
+  %   \textit{Cutting-edge server operating system wins UW computer
+  %     science prize.} GeekWire. October 23, 2014.\\\vspace{-0.5em}
+
+  %   \textit{Faster websites, more reliable data.}
+  %   MIT News. October 14, 2010.\\
+  % \end{rsection}
   \begin{rsection}{Teaching}
     \begin{rentry}{Distributed Systems (UW CSE 452)}{Seattle, WA}
       \rline{Teaching Assistant}{Winter 2016}   
