--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -11,6 +11,40 @@
 @string{hotos = "Proceedings of the Workshop on Hot Topics in Operating Systems (HotOS)"}
 @string{hotcloud = "Proceedings of the Workshop on Hot Topics in Cloud Computing (HotCloud)"}
 
+@techreport{lebeck-marvin-tr,
+  author =        {Niel Lebeck and Arvind Krishnamurthy and Henry M. Levy and Irene Zhang},
+  institution =   {University of Washington CSE},
+  month =         apr,
+  number =        {UW-CSE-2019-04-01},
+  title =         {End the Senseless Killing: Improving Memory Management for Mobile Operating Systems},
+  year =          2019,
+    url={papers/marvin-tr19.pdf},
+  abstract =      {To ensure low-latency memory allocation, mobile
+                  operating systems needing memory kill applications
+                  instead of swapping memory to disk.  This design
+                  choice shifts the burden of managing over-utilized
+                  memory to application programmers, requiring them to
+                  constantly checkpoint their application state to
+                  disk. This paper presents Marvin, a new memory
+                  manager for mobile platforms that efficiently
+                  supports swapping while meeting the strict
+                  performance requirements of mobile apps.  Marvin's
+                  swap-enabled language runtime is co-designed with
+                  OS-level memory management to avoid common pitfalls
+                  of traditional swap mechanisms. Its three key
+                  features include: (1) a new swap mechanism, called
+                  ahead-of-time (AOT) swap, which pre-writes
+                  memory to disk, then harvests it quickly when
+                  needed, (2) a modified bookmarking garbage collector
+                  that avoids swapping in unused memory, and (3) an
+                  object-granularity working set estimator. Our
+                  experiments show that Marvin can run more than 2x as
+                  many concurrent apps as Android, and that Marvin can
+                  reclaim memory over 60x faster than Android with a
+                  Linux swap file can allocate memory under memory
+                  pressure.  }
+}
+
 @InProceedings{chimera-hotcloud,
   author =        {Amy Ousterhout and Adam Belay and Irene Zhang},
   month =         7,
