updating imgs and posts

--- a/_posts/2019-04-25-hotcloud.md
+++ b/_posts/2019-04-25-hotcloud.md
@@ -8,4 +8,4 @@ link: /papers/chimera-hotcloud19.pdf
 I'm happy to announce that our work on co-designing network congestion
 control and OS scheduling has been accepted to [HotCloud
 2019](https://www.usenix.org/conference/hotcloud19).  Read the
-[pre-camera-ready](papers/chimera-hotcloud19.pdf).
+[camera-ready](papers/chimera-hotcloud19.pdf).
