adding demikernel blog post

--- a/_posts/2019-05-18-kubecon.md
+++ b/_posts/2019-05-18-kubecon.md
@@ -7,4 +7,5 @@ link: https://kccnceu19.sched.com/event/MPXr
 
 I will be presenting Amino, Huawei's open-source version of Sapphire,
 at [KubeCon Europe](https://kccnceu19.sched.com/event/MPXr) and
-[KubeCon China](https://sched.co/Nrlc).
+[KubeCon China](https://sched.co/Nrlc).  Read the [OSDI 2014
+paper](papers/sapphire-osdi14.pdf).
