--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -14,7 +14,7 @@
 @techreport{lebeck-marvin-tr,
   author =        {Niel Lebeck and Arvind Krishnamurthy and Henry M. Levy and Irene Zhang},
   institution =   {University of Washington CSE},
-  month =         apr,
+  month =         4,
   number =        {UW-CSE-2019-04-01},
   title =         {End the Senseless Killing: Improving Memory Management for Mobile Operating Systems},
   year =          2019,
@@ -293,7 +293,7 @@ talk={https://www.youtube.com/watch?v=yE3eMxYJDiE}
                    Adriana Szekeres and Arvind Krishnamurthy and
                    Dan R. K. Ports},
   institution =   {University of Washington CSE},
-  month =         oct,
+  month =         10,
   number =        {UW-CSE-2014-12-01 v2},
   title =         {Building Consistent Transactions with Inconsistent
                    Replication (Extended Version)},
