removing stupid baseurl things

--- a/_posts/2014-12-5-tapir.md
+++ b/_posts/2014-12-5-tapir.md
@@ -3,6 +3,6 @@ layout: post
 shortnews: true
 ---
 
-The [TAPIR]({{ site.base }}/research/tapir/) tech report has been released. If you are
+The [TAPIR](research/tapir/) tech report has been released. If you are
 interested in how we build consistent transactions using inconsistent
 replication, check out the report [here](papers/tapir-tr14.pdf).
