--- a/_posts/2015-04-02-tapir.md
+++ b/_posts/2015-04-02-tapir.md
@@ -6,7 +6,7 @@ photo: 'https://c2.staticflickr.com/6/5510/11690414524_4a2d975825_b.jpg'
 ---
 
 Having just finished yet another iteration of the [TAPIR
-paper]({{site.base}}/research/tapir/), I thought I would try to
+paper](research/tapir/), I thought I would try to
 distill what I have learned from the project. It has been a much
 harder and more interesting project than I anticipated but the photos
 of baby tapirs helped me get through it.
