--- a/_posts/2015-1-9-cses.md
+++ b/_posts/2015-1-9-cses.md
@@ -9,5 +9,5 @@ Operating Systems Services for Modern Applications covering [Sapphire,
 Agate and Diamond](http://sapphire.cs.washington.edu/).
 
 Slides are available
-[here]({{site.base}}/papers/cses-slides15.pdf). More from Ed on the
+[here](papers/cses-slides15.pdf). More from Ed on the
 [CSE News.](https://news.cs.washington.edu/2015/01/10/cses-2015/)
